proxy/security_headers.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: security-headers
  namespace: proxy
spec:
  headers:
    accessControlAllowMethods:
      - "GET"
      - "OPTIONS"
      - "PUT"
    accessControlAllowOriginList:
      - origin
    accessControlMaxAge: 100
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    frameDeny: true
    sslRedirect: true
    stsIncludeSubdomains: true
    stsPreload: true
    # https://securityheaders.com/
    # currently using the CSP from authentik: https://docs.goauthentik.io/security/security-hardening/#content-security-policy-csp
    contentSecurityPolicy: "default-src 'self'; frame-ancestors 'none'; img-src https: data:; object-src 'none'; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline';"
    permissionsPolicy: "geolocation=(self), microphone=(self), camera=(self), fullscreen=*"
    customFrameOptionsValue: "SAMEORIGIN"
    referrerPolicy: "same-origin"
    featurePolicy: "vibrate 'self'"
    stsSeconds: 15552000
