proxy/grigoris_proxy.yaml
 
apiVersion: v1
kind: Service
metadata:
  name: grigoris-service
  namespace: proxy
spec:
  type: ExternalName
  externalName: 192.168.99.149
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grigoris-http
  namespace: proxy
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`zuri.greganagno.com`)
      kind: Rule
      services:
        - name: grigoris-service
          port: 80
      priority: 1000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: grigoris
  namespace: proxy
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`zuri.greganagno.com`)
      services:
        - name: grigoris-service
          port: 443
      priority: 1000
  tls:
    passthrough: true
