proxy/https_redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: proxy
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: proxy
  name: https-redirect
spec:
  entryPoints:
    - web
  routes:
    - match: HostRegexp(`^.+`)
      kind: Rule
      # More or less a randoma service so we can have a valid IngressRoute
      # It is necessary to have a valid IngressRoute
      services:
        - name: ping@internal
          kind: TraefikService
      middlewares:
      - name: https-redirect
        namespace: proxy
      # It is the lowest possible priority. If no other ingress route is specified
      # it is used to forward everything to the https endpoint
      # We prefer to do it like that and not in the port level, because the cert-manager 
      # needs the HTTP to validate the certificates. So if cert-manager specifieds an endpoint
      # this route will not be used
      priority: 1
