proxy/traefik-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: proxy
  name: proxy
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`proxy.internal`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
      - name: security-headers
        namespace: proxy
  tls:
    secretName: proxy.internal
    options:
      name: tls-security-headers
      namespace: proxy
