proxy/whoami.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: default
  name: whoami
  labels:
    app: whoami

spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: containous/whoami
              
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: whoami
spec:
  selector:
    app: whoami
  ipFamilyPolicy: RequireDualStack
  ipFamilies:
  - IPv6
  - IPv4
  ports:
    - protocol: TCP
      name: web
      targetPort: 80
      port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.internal`)
      kind: Rule
      services:
        - name: whoami
          port: 80
      middlewares:
      - name: security-headers
        namespace: proxy
  tls:
    secretName: www.internal
    options:
      name: tls-security-headers
      namespace: proxy
